--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="assets/javascript/phaser.js"></script>
 
 </head>
-
+<!-- yoyo -->
 
 <body>
         <script type='text/javascript' src='assets/javascript/game.js'></script>
