--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
 
 
 <body>
+    asdf
+    asdf
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
         <script type='text/javascript' src='assets/javascript/game.js'></script>
 </body>
 
