--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rpg</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
     <script src="assets/javascript/phaser.js"></script>
@@ -17,6 +16,8 @@
     asdf
     asdf
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
+        <script type='text/javascript' src='assets/enemies/scripts/tier1melee.js'></script>
         <script type='text/javascript' src='assets/javascript/game.js'></script>
+        
 </body>
 
