--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <script type='text/javascript' src='assets/enemies/scripts/tier1melee.js'></script>
     <script type='text/javascript' src='assets/javascript/floor1.js'></script>
     <script type='text/javascript' src='assets/javascript/floor2.js'></script>
+    <script type='text/javascript' src='assets/UI/ui.js'></script>
     <script type='text/javascript' src='assets/javascript/game.js'></script>
 </body>
 
