--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
     <script type='text/javascript' src='assets/enemies/scripts/clientEnemies.js'></script>
     <script type='text/javascript' src='assets/javascript/floor1.js'></script>
     <script type='text/javascript' src='assets/javascript/floor2.js'></script>
+    <script type='text/javascript' src='assets/javascript/floor3.js'></script>
+    <script type='text/javascript' src='assets/javascript/floor4.js'></script>
     <script type='text/javascript' src='assets/UI/ui.js'></script>
+    <script type='text/javascript' src='assets/UI/bossUI.js'></script>
     <script type='text/javascript' src='assets/javascript/game.js'></script>
 </body>
 
