--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,16 @@
     <script src="assets/javascript/phaser.js"></script>
 
 </head>
-<!-- yoyo -->
 
 <body>
+    <header>Phaser Game</header>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
     <script type = 'text/javascript' src = 'assets/javascript/globalFuncs.js'></script>
     <script type = 'text/javascript' src = 'assets/javascript/playerAnimations.js'></script>
     <script type='text/javascript' src='assets/enemies/scripts/clientEnemies.js'></script>
+    <script type='text/javascript' src='assets/javascript/lobby.js'></script>
     <script type='text/javascript' src='assets/javascript/floor1.js'></script>
     <script type='text/javascript' src='assets/javascript/floor2.js'></script>
     <script type='text/javascript' src='assets/javascript/floor3.js'></script>
