--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rpg</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="assets/javascript/phaser.js"></script>
 
 </head>
 
 <body>
-    <header>Phaser Game</header>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
-    <script type = 'text/javascript' src = 'assets/javascript/globalFuncs.js'></script>
-    <script type = 'text/javascript' src = 'assets/javascript/playerAnimations.js'></script>
-    <script type='text/javascript' src='assets/enemies/scripts/clientEnemies.js'></script>
-    <script type='text/javascript' src='assets/javascript/lobby.js'></script>
-    <script type='text/javascript' src='assets/javascript/floor1.js'></script>
-    <script type='text/javascript' src='assets/javascript/floor2.js'></script>
-    <script type='text/javascript' src='assets/javascript/floor3.js'></script>
-    <script type='text/javascript' src='assets/javascript/floor4.js'></script>
-    <script type='text/javascript' src='assets/UI/ui.js'></script>
-    <script type='text/javascript' src='assets/UI/bossUI.js'></script>
-    <script type='text/javascript' src='assets/javascript/game.js'></script>
+    <div>
+        <a href='/play'><button>JOIN THE FIGHT</button></a>
+    </div>
 </body>
 
