--- a/public/game.html
+++ b/public/game.html
@@ -12,9 +12,7 @@
 </head>
 
 <body>
-    <header>Phaser Game</header>
-
-
+    <div id='game'></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
     <script type = 'text/javascript' src = 'assets/javascript/globalFuncs.js'></script>
     <script type = 'text/javascript' src = 'assets/javascript/playerAnimations.js'></script>
