--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div>
+    <div id ='buttonContainer'>
         <a href='/play'><button>JOIN THE FIGHT</button></a>
     </div>
 </body>
