--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rpg</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="assets/javascript/phaser.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-    <div id ='buttonContainer'>
-        <a href='/play'><button>JOIN THE FIGHT</button></a>
+    <div id ='main'>
+        <div id ='buttonContainer'>
+            <a href='/play'><button>JOIN THE FIGHT</button></a>
+        </div>
+        <div id='infoBox'>
+            <div id='infoHeader'>
+                <div class='infoElement'><a href='#'>ABOUT(placeholder)</a></div>
+                <div class='infoElement'><a href='#'>INSTRUCTIONS(placeholder)</a></div>
+                <div class='infoElement'><a href='#'>CREDITS(placeholder)</a></div>
+            </div>
+            <div id='infoBody'>
+                Join players online to traverse the dungeon and defeat the boss. Progress is persistent between all players around the world. No enemies respawn and when a level is cleared all new players will join at the next level.
+                Will you be the one to save the world? Or will you be a stepping stone for others. 
+                <br><br>
+                Deaths so far: {placeholder}
+                <br><br>
+                Controls: WASD movement, SPACE to attack.
+            </div>
+        </div>
     </div>
 </body>
 
