autoscroll added to credits

--- a/public/game.html
+++ b/public/game.html
@@ -55,6 +55,7 @@
     <script type='text/javascript' src='assets/javascript/floor4.js'></script>
     <script type='text/javascript' src='assets/UI/ui.js'></script>
     <script type='text/javascript' src='assets/UI/bossUI.js'></script>
+    <script type='text/javascript' src='assets/javascript/credits.js'></script>
     <script type='text/javascript' src='assets/javascript/game.js'></script>
     <script>
         $('#infolink').on('click', function(){
