added a start screen

--- a/ClientOnly/index.html
+++ b/ClientOnly/index.html
@@ -19,6 +19,8 @@
     <script type='text/javascript' src='assets/javascript/floor2.js'></script>
     <script type='text/javascript' src='assets/javascript/floor3.js'></script>
     <script type='text/javascript' src='assets/javascript/floor4.js'></script>
+    <script type='text/javascript' src='assets/javascript/start.js'></script>
+
     <script type='text/javascript' src='assets/UI/ui.js'></script>
     <script type='text/javascript' src='assets/UI/bossUI.js'></script>
     <script type='text/javascript' src='assets/javascript/game.js'></script>
