--- a/public/game.html
+++ b/public/game.html
@@ -56,6 +56,8 @@
     <script type='text/javascript' src='assets/UI/ui.js'></script>
     <script type='text/javascript' src='assets/UI/bossUI.js'></script>
     <script type='text/javascript' src='assets/javascript/credits.js'></script>
+    <script type='text/javascript' src='assets/javascript/start.js'></script>
+
     <script type='text/javascript' src='assets/javascript/game.js'></script>
     <script>
         $('#infolink').on('click', function(){
