creating new client only version

--- a/ClientOnly/index.html
+++ b/ClientOnly/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rpg</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <script src="assets/javascript/phaser.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.12.0/phaser.min.js"></script>
 </head>
 
 <body>
@@ -19,10 +19,11 @@
     <script type='text/javascript' src='assets/javascript/floor2.js'></script>
     <script type='text/javascript' src='assets/javascript/floor3.js'></script>
     <script type='text/javascript' src='assets/javascript/floor4.js'></script>
-    <script type='text/javascript' src='assets/javascript/start.js'></script>
-
     <script type='text/javascript' src='assets/UI/ui.js'></script>
     <script type='text/javascript' src='assets/UI/bossUI.js'></script>
+    <script type='text/javascript' src='assets/javascript/credits.js'></script>
+    <script type='text/javascript' src='assets/javascript/start.js'></script>
+
     <script type='text/javascript' src='assets/javascript/game.js'></script>
 </body>
 
