--- a/public/index.html
+++ b/public/index.html
@@ -6,53 +6,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rpg</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <script src="assets/javascript/phaser.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="assets/javascript/phaser.js"></script>
     <script
-			  src="https://code.jquery.com/jquery-3.3.1.min.js"
-			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-			  crossorigin="anonymous"></script>
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
-    <div id ='main'>
-        <div id ='buttonContainer'>
-            <a href='/play'><button>JOIN THE FIGHT</button></a>
+    <div id='game'></div>
+
+
+    <div id='infoBox'>
+        <div id='infoHeader'>
+            <div class='infoElement' id='infolink'><a href='#'  >ABOUT</a></div>
+            <div class='infoElement' id='attributionlink'><a href='#'>ATTRIBUTIONS</a></div>
         </div>
-        <div id='infoBox'>
-            <div id='infoHeader'>
-                <div class='infoElement' id='infolink'><a href='#'  >ABOUT</a></div>
-                <div class='infoElement' id='attributionlink'><a href='#'>ATTRIBUTIONS</a></div>
+        <div id='infoBody'>
+            Join your friends and journey into the abyss. Abyss is a persistent multiplayer game where progress is persistent between all players around the world. No enemies respawn or heal until the final boss is defeated.
+            <br><br>
+            Controls: WASD movement, SPACE to attack.
+            <br><br>
+            Deaths: <span id = 'deathCount'></span>
+        </div>
+        <div id='attributionBody' hidden>
+            <div>
+                Creator: <a href='https://www.linkedin.com/in/vincent-nguyen-342015164/' target='_blank'>Vincent Nguyen</a>
             </div>
-            <div id='infoBody'>
-                Join your friends and journey into the abyss. Abyss is a persistent multiplayer game where progress is persistent between all players around the world. No enemies respawn or heal until the final boss is defeated.
-                <br><br>
-                Controls: WASD movement, SPACE to attack.
+            <div>
+                <p>Sprites by <a href='https://opengameart.org/users/lunarsignals' target='_blank'>LUNARSIGNALS</a> CC-BY-SA 3.0</p>
             </div>
-            <div id='attributionBody' hidden>
-                <div>
-                    Creator: <a href='https://www.linkedin.com/in/vincent-nguyen-342015164/' target='_blank'>Vincent Nguyen</a>
-                </div>
-                <div>
-                    <p>Sprites by <a href='https://opengameart.org/users/lunarsignals' target='_blank'>LUNARSIGNALS</a> CC-BY-SA 3.0</p>
-                </div>
-                <div>
-                    <p>Tilesets by <a href='https://opengameart.org/users/beast' target='_blank'>Beast</a> CC-BY 3.0</p>
-                </div>
+            <div>
+                <p>Tilesets by <a href='https://opengameart.org/users/beast' target='_blank'>Beast</a> CC-BY 3.0</p>
             </div>
         </div>
     </div>
 </body>
 
-<script>
-$('#infolink').on('click', function(){
-    $('#infoBody').show()
-    $('#attributionBody').hide()
-})
-$('#attributionlink').on('click',function(){
-    $('#infoBody').hide()
-    $('#attributionBody').show()
-})
-</script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
+    <script type = 'text/javascript' src = 'assets/javascript/globalFuncs.js'></script>
+    <script type = 'text/javascript' src = 'assets/javascript/playerAnimations.js'></script>
+    <script type='text/javascript' src='assets/enemies/scripts/clientEnemies.js'></script>
+    <script type='text/javascript' src='assets/javascript/lobby.js'></script>
+    <script type='text/javascript' src='assets/javascript/floor1.js'></script>
+    <script type='text/javascript' src='assets/javascript/floor2.js'></script>
+    <script type='text/javascript' src='assets/javascript/floor3.js'></script>
+    <script type='text/javascript' src='assets/javascript/floor4.js'></script>
+    <script type='text/javascript' src='assets/UI/ui.js'></script>
+    <script type='text/javascript' src='assets/UI/bossUI.js'></script>
+    <script type='text/javascript' src='assets/javascript/credits.js'></script>
+    <script type='text/javascript' src='assets/javascript/start.js'></script>
+
+    <script type='text/javascript' src='assets/javascript/game.js'></script>
+    <script>
+
+        $('#infolink').on('click', function(){
+        $('#infoBody').show()
+        $('#attributionBody').hide()
+        })
+        $('#attributionlink').on('click',function(){
+        $('#infoBody').hide()
+        $('#attributionBody').show()
+        })
+        var metadata = io('/metadata')
+        metadata.on('deathCount',(deaths)=>{
+            $('#deathCount').text(deaths)
+        })
+        </script>
+</body>
+
